tests/negative/typecheck/addrof-type.orng
fn main() -> Int {
    let const x: Type = &4
    0
}